LU-5461 mdc: don't add to page cache upon failure

Reading directory pages may fail on MDS, in this case client should
not cache a non-up-to-date directory page, because it will cause
a later read on the same page fail.

Add sanity 242 for this.

Signed-off-by: Lai Siyao <lai.siyao@intel.com>
Change-Id: Icbb55c0ecc4b88913b08ac8998c2673ec15b18ea
Reviewed-on: http://review.whamcloud.com/11450
Tested-by: Jenkins
Reviewed-by: Fan Yong <fan.yong@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>